plugins/binding/capi/include/TellusimCAPI.h

/// Tellusim Handles
typedef struct TSString_t *TSString;
TS_CAPI void TS_CCALL tsString_delete(TSString self);
TS_CAPI const char* TS_CCALL tsString_get_c(TSString self);