plugins/binding/rust/source/TellusimRSBase.rs

// Copyright (C) 2018-2026, Tellusim Technologies Inc. All rights reserved
// https://tellusim.com/

use std::fmt;
use std::mem;
use std::ops;
use std::ptr;
use std::ffi::{ c_void, c_char, CStr, CString };

pub use crate::math::*;
pub use crate::api::*;

/* 8-bit integer constants
 */
pub const MINI8: i32 = -127 - 1;
pub const MAXI8: i32 =  127;
pub const MAXU8: u32 = 255;

/* 16-bit integer constants
 */
pub const MINI16: i32 = -32767 - 1;
pub const MAXI16: i32 =  32767;
pub const MAXU16: u32 = 65535;

/* 32-bit integer constants
 */
pub const MINI32: i32 = -2147483647 - 1;
pub const MAXI32: i32 =  2147483647;
pub const MAXU32: u32 = 4294967295;

/* 64-bit integer constants
 */
pub const MINI64: i64 = -9223372036854775807 - 1;
pub const MAXI64: i64 =  9223372036854775807;
pub const MAXU64: u64 = 18446744073709551615;

/* 16-bit floating point constants
 */
pub const MINF16: f32 = 5.96046448e-08;
pub const MAXF16: f32 = 65504.0;

/* 32-bit floating point constants
 */
pub const MINF32: f32 = 1.17549435e-38;
pub const MAXF32: f32 = 3.40282346e+38;
pub const PI: f32 = 3.141592653589793;
pub const PI2: f32 = 6.283185307179586;
pub const PI05: f32 = 1.570796326794897;
pub const SQRT2: f32 = 1.4142135623730951;
pub const DEG2RAD: f32 = 0.017453292519943;
pub const RAD2DEG: f32 = 57.295779513082325;

/* 64-bit floating point constants
 */
pub const MINF64: f64 = 2.22507385850720138e-308;
pub const MAXF64: f64 = 1.79769313486231571e+308;
pub const PID: f64 = 3.141592653589793115997963468544;
pub const PI2D: f64 = 6.283185307179586231995926937088;
pub const PI05D: f64 = 1.570796326794896557998981734272;
pub const SQRT2D: f64 = 1.414213562373095145474621858739;
pub const DEG2RADD: f64 = 0.017453292519943295474371680598;
pub const RAD2DEGD: f64 = 57.295779513082322864647721871734;

/*****************************************************************************\
 *
 * Utils
 *
\*****************************************************************************/

/*
 */
pub fn get_cstring(string: *const c_char) -> std::string::String {
	unsafe {
		CStr::from_ptr(string).to_string_lossy().into_owned()
	}
}

pub fn get_string(this: *mut c_void) -> std::string::String {
	unsafe {
		let ret = CStr::from_ptr(tsString_get_c(this)).to_string_lossy().into_owned();
		tsString_delete(this);
		ret
	}
}

/*
 */
extern "C" {
	fn tsString_delete(this: *mut c_void);
	fn tsString_get_c(this: *const c_void) -> *const c_char;
}

/*****************************************************************************\
 *
 * Log
 *
\*****************************************************************************/

/*
 */
#[macro_export]
macro_rules! ts_log {
	($level:ident, $str:expr) => {
		log::print_with_level(LogLevel::$level, $str);
	}
}

#[macro_export]
macro_rules! ts_loge {
	($level:ident, $str:expr) => {
		log::printe(LogLevel::$level, $str);
	}
}

#[macro_export]
macro_rules! ts_logf {
	($level:ident, $($args:expr),*) => {
		log::print_with_level(LogLevel::$level, &format!($($args),*));
	}
}

#[macro_export]
macro_rules! ts_logef {
	($level:ident, $($args:expr),*) => {
		log::printe(LogLevel::$level, &format!($($args),*));
	}
}

/*****************************************************************************\
 *
 * Color
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Color {
	pub r: f32,
	pub g: f32,
	pub b: f32,
	pub a: f32,
}

/*
 */
impl Color {
	
	pub fn new_s(c: f32) -> Color {
		Color { r: c, g: c, b: c, a: c }
	}
	pub fn new_la(l: f32, a: f32) -> Color {
		Color { r: l, g: l, b: l, a: a }
	}
	pub fn new_rgb(r: f32, g: f32, b: f32) -> Color {
		Color { r: r, g: g, b: b, a: 1.0 }
	}
	pub fn new(r: f32, g: f32, b: f32, a: f32) -> Color {
		Color { r: r, g: g, b: b, a: a }
	}
	pub fn new_a(c: &[f32]) -> Color {
		Color { r: c[0], g: c[1], b: c[2], a: c[3] }
	}
	
	pub fn gamma_to_linear(&self) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_gammaToLinear(&mut ret, self); }
		ret
	}
	pub fn linear_to_gamma(&self) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_linearToGamma(&mut ret, self); }
		ret
	}
	
	pub fn srgb_to_linear(&self) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_sRGBtoLinear(&mut ret, self); }
		ret
	}
	pub fn linear_to_srgb(&self) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_linearToSRGB(&mut ret, self); }
		ret
	}
	
	pub fn set_rgbau8(&mut self, color: u32) {
		unsafe { tsColor_setRGBAu8(self, color) }
	}
	pub fn rgbau8(&self) -> u32 {
		unsafe { tsColor_getRGBAu8(self) }
	}
	
	pub fn set_bgrau8(&mut self, color: u32) {
		unsafe { tsColor_setBGRAu8(self, color) }
	}
	pub fn bgrau8(&self) -> u32 {
		unsafe { tsColor_getBGRAu8(self) }
	}
	
	pub fn set_abgru8(&mut self, color: u32) {
		unsafe { tsColor_setABGRu8(self, color) }
	}
	pub fn abgru8(&self) -> u32 {
		unsafe { tsColor_getABGRu8(self) }
	}
	
	pub fn html(src: &str) -> Color {
		let mut ret = Color::default();
		let src_ = CString::new(src).unwrap();
		unsafe { tsColor_html(&mut ret, src_.as_ptr()); }
		ret
	}
	pub fn hsv(h: f32, s: f32, v: f32) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_hsv(&mut ret, h, s, v); }
		ret
	}
	pub fn temperature(t: f32) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_temperature(&mut ret, t); }
		ret
	}
	
	pub fn min(c0: &Color, c1: &Color) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_min(&mut ret, c0, c1); }
		ret
	}
	pub fn max(c0: &Color, c1: &Color) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_max(&mut ret, c0, c1); }
		ret
	}
	
	pub fn clamp(&self, c0: &Color, c1: &Color) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_clamp(&mut ret, self, c0, c1); }
		ret
	}
	pub fn saturate(&self) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_saturate(&mut ret, self); }
		ret
	}
	
	pub fn lerp(c0: &Color, c1: &Color, k: f32) -> Color {
		let mut ret = Color::default();
		unsafe { tsColor_lerp(&mut ret, c0, c1, k); }
		ret
	}
	
	pub fn zero() -> Color {
		Color { r: 0.0, g: 0.0, b: 0.0, a: 0.0 }
	}
	pub fn black() -> Color {
		Color { r: 0.0, g: 0.0, b: 0.0, a: 1.0 }
	}
	pub fn white() -> Color {
		Color { r: 1.0, g: 1.0, b: 1.0, a: 1.0 }
	}
	pub fn gray() -> Color {
		Color { r: 0.5, g: 0.5, b: 0.5, a: 1.0 }
	}
	
	pub fn red() -> Color {
		Color { r: 1.0, g: 0.0, b: 0.0, a: 1.0 }
	}
	pub fn yellow() -> Color {
		Color { r: 1.0, g: 1.0, b: 0.0, a: 1.0 }
	}
	pub fn green() -> Color {
		Color { r: 0.0, g: 1.0, b: 0.0, a: 1.0 }
	}
	pub fn cyan() -> Color {
		Color { r: 0.0, g: 1.0, b: 1.0, a: 1.0 }
	}
	pub fn blue() -> Color {
		Color { r: 0.0, g: 0.0, b: 1.0, a: 1.0 }
	}
	pub fn magenta() -> Color {
		Color { r: 1.0, g: 0.0, b: 1.0, a: 1.0 }
	}
}

/*
 */
impl fmt::Display for Color {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2} {3})", self.r, self.g, self.b, self.a)
	}
}

/*
 */
super::declare_scalar_op!(Color, f32, Mul, mul, tsColor_mul1);
super::declare_scalar_op!(Color, f32, Div, div, tsColor_div1);
super::declare_scalar_op!(Color, f32, Add, add, tsColor_add1);
super::declare_scalar_op!(Color, f32, Sub, sub, tsColor_sub1);

/*
 */
super::declare_vector_op!(Color, Mul, mul, tsColor_mul);
super::declare_vector_op!(Color, Div, div, tsColor_div);
super::declare_vector_op!(Color, Add, add, tsColor_add);
super::declare_vector_op!(Color, Sub, sub, tsColor_sub);

/*
 */
extern "C" {
	fn tsColor_gammaToLinear(ret: *mut Color, c: *const Color) -> *mut Color;
	fn tsColor_linearToGamma(ret: *mut Color, c: *const Color) -> *mut Color;
	fn tsColor_sRGBtoLinear(ret: *mut Color, c: *const Color) -> *mut Color;
	fn tsColor_linearToSRGB(ret: *mut Color, c: *const Color) -> *mut Color;
	fn tsColor_setRGBAu8(c: *mut Color, color: u32);
	fn tsColor_getRGBAu8(c: *const Color) -> u32;
	fn tsColor_setBGRAu8(c: *mut Color, color: u32);
	fn tsColor_getBGRAu8(c: *const Color) -> u32;
	fn tsColor_setABGRu8(c: *mut Color, color: u32);
	fn tsColor_getABGRu8(c: *const Color) -> u32;
	fn tsColor_html(ret: *mut Color, src: *const c_char) -> *mut Color;
	fn tsColor_hsv(ret: *mut Color, h: f32, s: f32, v: f32) -> *mut Color;
	fn tsColor_temperature(ret: *mut Color, t: f32) -> *mut Color;
	fn tsColor_mul1(ret: *mut Color, c0: *const Color, c1: f32) -> *mut Color;
	fn tsColor_div1(ret: *mut Color, c0: *const Color, c1: f32) -> *mut Color;
	fn tsColor_add1(ret: *mut Color, c0: *const Color, c1: f32) -> *mut Color;
	fn tsColor_sub1(ret: *mut Color, c0: *const Color, c1: f32) -> *mut Color;
	fn tsColor_mul(ret: *mut Color, c0: *const Color, c1: *const Color) -> *mut Color;
	fn tsColor_div(ret: *mut Color, c0: *const Color, c1: *const Color) -> *mut Color;
	fn tsColor_add(ret: *mut Color, c0: *const Color, c1: *const Color) -> *mut Color;
	fn tsColor_sub(ret: *mut Color, c0: *const Color, c1: *const Color) -> *mut Color;
	fn tsColor_min(ret: *mut Color, c0: *const Color, c1: *const Color) -> *mut Color;
	fn tsColor_max(ret: *mut Color, c0: *const Color, c1: *const Color) -> *mut Color;
	fn tsColor_clamp(ret: *mut Color, c: *const Color, c0: *const Color, c1: *const Color) -> *mut Color;
	fn tsColor_saturate(ret: *mut Color, c: *const Color) -> *mut Color;
	fn tsColor_lerp(ret: *mut Color, c0: *const Color, c1: *const Color, k: f32) -> *mut Color;
}

/*****************************************************************************\
 *
 * ImageColor
 *
\*****************************************************************************/

/*
 */
#[repr(C, align(16))]
#[derive(Copy, Clone, Default)]
pub struct ImageColor {
	pub r: u32,
	pub g: u32,
	pub b: u32,
	pub a: u32,
}

/*
 */
impl ImageColor {
	
	pub fn new_s(c: u32) -> ImageColor {
		ImageColor { r: c, g: c, b: c, a: c }
	}
	pub fn new_la(l: u32, a: u32) -> ImageColor {
		ImageColor { r: l, g: l, b: l, a: a }
	}
	pub fn new_rgb(r: u32, g: u32, b: u32) -> ImageColor {
		ImageColor { r: r, g: g, b: b, a: 255 }
	}
	pub fn new_v4i(v: &Vector4i) -> ImageColor {
		ImageColor { r: v.x as u32, g: v.y as u32, b: v.z as u32, a: v.w as u32 }
	}
	pub fn new_v4u(v: &Vector4u) -> ImageColor {
		ImageColor { r: v.x, g: v.y, b: v.z, a: v.w }
	}
	pub fn new_v4f(v: &Vector4f) -> ImageColor {
		let mut ret = ImageColor::default();
		unsafe { tsImageColor_set_f(&mut ret, v); }
		ret
	}
	pub fn new_cf(c: &Color, format: Format) -> ImageColor {
		let mut ret = ImageColor::default();
		unsafe { tsImageColor_set_c(&mut ret, c, format); }
		ret
	}
	pub fn new_a(c: &[u32]) -> ImageColor {
		ImageColor { r: c[0], g: c[1], b: c[2], a: c[3] }
	}
	
	pub fn set_v4i(&mut self, v: &Vector4i) {
		unsafe { tsImageColor_set_i(self, v); }
	}
	pub fn v4i(&self) -> Vector4i {
		let mut ret = Vector4i::default();
		unsafe { tsImageColor_get_i(self, &mut ret); }
		ret
	}
	pub fn set_v4u(&mut self, v: &Vector4u) {
		unsafe { tsImageColor_set_u(self, v); }
	}
	pub fn v4u(&self) -> Vector4u {
		let mut ret = Vector4u::default();
		unsafe { tsImageColor_get_u(self, &mut ret); }
		ret
	}
	pub fn set_v4f(&mut self, v: &Vector4f) {
		unsafe { tsImageColor_set_f(self, v); }
	}
	pub fn v4f(&self) -> Vector4f {
		let mut ret = Vector4f::default();
		unsafe { tsImageColor_get_f(self, &mut ret); }
		ret
	}
	pub fn set_color(&mut self, c: &Color, format: Format) {
		unsafe { tsImageColor_set_c(self, c, format); }
	}
	pub fn color(&self, format: Format) -> Color {
		let mut ret = Color::default();
		unsafe { tsImageColor_get_c(self, &mut ret, format); }
		ret
	}
}

/*
 */
impl fmt::Display for ImageColor {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2} {3})", self.r, self.g, self.b, self.a)
	}
}
